Fix bug in recipe container. Resize sidebar so there is no overflow.

--- a/src/Containers/App/App.scss
+++ b/src/Containers/App/App.scss
@@ -11,7 +11,7 @@
 
 .sidebar {
   background: linear-gradient(to bottom, #1C3744 20%, #ddd0b6);
-  height: 100vh;
+  min-height: 100vh;
   padding: 20px;
 }
 
@@ -19,7 +19,7 @@
   background-image: url('../../assets/small-zelda-header.png');
   background-size: contain;
   background-repeat: no-repeat;
-  height: 200px;
+  height: 160px;
 }
 
 #search-container {
