--- a/src/Containers/Filter/Filter.css
+++ b/src/Containers/Filter/Filter.css
@@ -1,5 +1,5 @@
 .Filter {
-  margin: 20px 0; }
+  margin: 20px 0 0; }
 
 .search-bar {
   font-size: 1.5em;
